--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,8 +1,7 @@
 project:
-  title: "Lab 6"
+  title: "csu-ess-lab6"
   output-dir: docs
   type: website
-
 format:
   html:
     self-contained: true
